unpackaged/main/default/objects/SDO_Sales_ChannelPlan_Objective__c/SDO_Sales_ChannelPlan_Objective__c.object-meta.xml
<CustomObject>
    <description>What: Tangible and measurable steps to achieve the plans high level purpose. Each objective has a type, a start and end date, and metrics to quantity targets and achieved results.</description>
    <label>Objective</label>
    <nameField>
        <label>Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>