unpackaged/main/default/objects/SDO_Sales_ChannelPlan_Objective__c/fields/Channel_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Channel_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Account Plan</label>
    <referenceTo>SFDC_Channel_Account_Plan__c</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>R00N4S000003A6xUUAS</relationshipName>
    <type>Lookup</type>
</CustomField>