unpackaged/main/default/objects/SDO_Sales_ChannelPlan_Objective__c/fields/Days_Left_Over__c.field-meta.xml
<CustomField>
    <fullName>Days_Left_Over__c</fullName>
    <formula>IF (ISPICKVAL (Status__c, &quot;Accomplished Objective&quot;),0,     IF (ISPICKVAL (Status__c, &quot;Exceeded Expectations&quot;),0,End_Date__c-TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left/ (Over)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>