unpackaged/main/default/objects/SDO_Sales_ChannelPlan_Objective__c/fields/Goal_Attained__c.field-meta.xml
<CustomField>
    <fullName>Goal_Attained__c</fullName>
    <formula>if(NULLVALUE(Metric_Result__c,0) &lt;&gt; 0,   if(NULLVALUE(Metric_Goal__c, 0) &lt;&gt; 0, Metric_Result__c / Metric_Goal__c, null), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Goal Attained</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>