unpackaged/main/default/objects/SDO_Sales_ChannelPlan_Objective__c/fields/Metric_Result__c.field-meta.xml
<CustomField>
    <fullName>Metric_Result__c</fullName>
    <label>Metric Result</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>