unpackaged/main/default/objects/SDO_Sales_ChannelPlan_Objective__c/fields/Objective_Type__c.field-meta.xml
<CustomField>
    <fullName>Objective_Type__c</fullName>
    <label>Objective Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Expand Market Coverage</fullName>
            </value>
            <value>
                <fullName>Generate New Opportunities</fullName>
            </value>
            <value>
                <fullName>Improve Customer Satisfaction</fullName>
            </value>
            <value>
                <fullName>Improve Service Levels</fullName>
            </value>
            <value>
                <fullName>Increase Certifications</fullName>
            </value>
            <value>
                <fullName>Increase Customer Base</fullName>
            </value>
            <value>
                <fullName>Increase Leads</fullName>
            </value>
            <value>
                <fullName>Increase Partner Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>