unpackaged/main/default/objects/SDO_Sales_ChannelPlan_Objective__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>if ( Days_Left_Over__c &lt; 0, &quot;Overdue&quot;, if( Days_Left_Over__c &gt; 0, &quot;In Progress&quot;, &quot;Complete&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>