unpackaged/main/default/objects/SDO_Sales_ChannelPlan_Objective__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Half-way</fullName>
            </value>
            <value>
                <fullName>Three Quarters</fullName>
            </value>
            <value>
                <fullName>Accomplished Objective</fullName>
            </value>
            <value>
                <fullName>Exceeded Expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>