unpackaged/main/default/objects/SDO_Sales_ChannelPlan_Objective__c/fields/Success_Measure__c.field-meta.xml
<CustomField>
    <fullName>Success_Measure__c</fullName>
    <label>Success Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Brand Recognition</fullName>
            </value>
            <value>
                <fullName>Product Knowledge</fullName>
            </value>
            <value>
                <fullName>Trained Employees</fullName>
            </value>
            <value>
                <fullName>Customer Satisfaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>