unpackaged/main/default/objects/SDO_Sales_ChannelPlan_Objective__c/listViews/ObjectivesDueNext30Days.listView-meta.xml
<ListView>
    <fullName>ObjectivesDueNext30Days</fullName>
    <columns>NAME</columns>
    <columns>Channel_Account_Plan__c</columns>
    <columns>End_Date__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>Objectives Due - Next 30 Days</label>
    <language>en_US</language>
</ListView>