unpackaged/main/default/objects/SDO_Sales_ChannelPlan_Objective__c/listViews/ObjectivesOverdue.listView-meta.xml
<ListView>
    <fullName>ObjectivesOverdue</fullName>
    <columns>NAME</columns>
    <columns>Channel_Account_Plan__c</columns>
    <columns>Stage__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Overdue</value>
    </filters>
    <label>Objectives - Overdue</label>
    <language>en_US</language>
</ListView>